--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,12 +1,15 @@
 {
   "dependencies": {
     "com.unity.ai.navigation": "1.1.5",
+    "com.unity.cinemachine": "2.9.7",
     "com.unity.collab-proxy": "2.0.5",
     "com.unity.feature.development": "1.0.1",
     "com.unity.ide.rider": "3.0.24",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.6.3",
+    "com.unity.multiplayer.tools": "1.1.1",
+    "com.unity.netcode.gameobjects": "1.9.1",
     "com.unity.probuilder": "5.1.1",
     "com.unity.services.lobby": "1.2.1",
     "com.unity.services.relay": "1.0.5",
